# VayuShield

./: .gitignore  Dockerfile.db  IMPROVEMENT_PLAN.md  QUICKSTART.md  README.md  SESSION_LOG.md  SESSION_S1_PROMPT.md  START.md  VayuShield_Session_Plan.docx  docker-compose.infra.yml  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation_users_table.py  0002_auth_expand_users.py  0003_cities_table.py  0004_wards_table.py  0005_stations_table.py  0006_station_readings_hypertable.py  0007_weather_readings_hypertable.py  0008_fire_hotspots_table.py  0009_emission_sources_table.py  0010_attributions_table.py  0011_aqi_alerts_table.py  0012_forecasts_table.py  0013_enforcement_queue_table.py  0014_inspections_table.py  0015_advisories_table.py  0016_ward_forecasts.py  0017_satellite_observations.py  0018_traffic_snapshots.py
backend/app/: main.py
backend/app/core/: aqi.py  claude_client.py  config.py  constants.py  database.py  exceptions.py  llm_client.py  logging.py  middleware.py  rate_limit.py  redis_blacklist.py  security.py
backend/app/db/: geodata_loader.py  seed.py
backend/app/jobs/: ingestion_jobs.py
backend/app/schemas/: common.py  geo.py
backend/app/tests/: conftest.py  test_advisory.py  test_attribution.py  test_auth.py  test_cities.py  test_city_onboarding.py  test_claude_integration.py  test_enforcement.py  test_forecasting.py  test_health.py  test_ingestion.py  test_inspector.py  test_reports.py  test_s1_fire_hotspots.py  (+4 more)
backend/scripts/: init_db.sql
(+95 files in other folders)
